--- a/index.html
+++ b/index.html
@@ -629,33 +629,36 @@
           </div>
           <div class="form-fild comment">
             <label class="form-lable" for="user-comment">Comment</label>
-              <textarea
-                class="form-user-comment"
-                name="user-comment"
-                id="user-comment"
-                cols="30"
-                rows="10"
-                placeholder="Text-input"
-              ></textarea>
-            </div>
-          
-        <div class="form-fild-checkbox">
-              <input type="checkbox" name="user-privacy" id="user-privacy"
-              value="true" class="checkbox-input visually-hidden" />
-              <label class="checkbox-lable" for="user-privacy"> I accept the terms and conditions of the
-                 <span class="checkbox-icon">
-                  <svg class="checkbox-icon-svg"  width="10" height="8">
-                    <use href="./images/icons.svg#icon-check" ></use>
-                  </svg>
-                 </span>
-                 <a class="checkbox-link" href="#">Privacy Policy</a></label>
-            </div>
-        
+            <textarea
+              class="form-user-comment"
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              placeholder="Text-input"
+            ></textarea>
+          </div>
 
+          <div class="form-fild-checkbox">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              class="checkbox-input visually-hidden"
+            />
+            <label class="checkbox-lable" for="user-privacy">
+              I accept the terms and conditions of the
+              <span class="checkbox-icon">
+                <svg class="checkbox-icon-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              <a class="checkbox-link" href="#">Privacy Policy</a></label
+            >
+          </div>
           <button class="modal-send-btn" type="submit">Send</button>
-        </div>
         </form>
-      </div>
       </div>
     </div>
   </body>
