--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@
               name="user-privacy"
               id="user-privacy"
               value="true"
+              placeholder="Text input"
               class="checkbox-input visually-hidden"
             />
             <label class="checkbox-lable" for="user-privacy">
