--- a/index.html
+++ b/index.html
@@ -654,8 +654,8 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <a class="checkbox-link" href="#">Privacy Policy</a></label
-            >
+              <a class="checkbox-link" href="#">Privacy Policy</a>
+            </label>
           </div>
           <button class="modal-send-btn" type="submit">Send</button>
         </form>
