--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </header>
     <main>
-      <!-- Hero -->
+      <!-- Hero ======================================================================================================================-->
       <section id="hero" class="section hero">
         <div class="container">
           <h1 class="hero-header">Effective Solutions for Your Business</h1>
@@ -64,7 +64,7 @@
         </div>
       </section>
 
-      <!-- Benefits -->
+      <!-- Benefits =================================================================================================================-->
       <section id="benefits" class="section benefits">
         <div class="container">
           <h2 class="visually-hidden">benefits</h2>
@@ -121,7 +121,7 @@
           </ul>
         </div>
       </section>
-      <!-- our-team-->
+      <!-- our-team ======================================================================================================-->
 
       <section id="team" class="section team">
         <div class="container">
@@ -371,7 +371,7 @@
           </ul>
         </div>
       </section>
-      <!-- portfolio -->
+      <!-- portfolio ==================================================================================================-->
       <section id="portfolio" class="section portfolio">
         <div class="container">
           <h2 class="portfolio-header">Our Portfolio</h2>
@@ -489,7 +489,7 @@
         </div>
       </section>
     </main>
-    <!-- footer -->
+    <!-- footer ==================================================================================================-->
     <footer id="footer" class="section footer">
       <div class="container footer-container">
         <div class="footer-logo-box">
@@ -551,7 +551,7 @@
             </li>
           </ul>
         </div>
-        <!-- footer-form -->
+        <!-- footer-form =============================================================================================-->
         <div class="footer-form">
           <p class="footer-fotm-cap">Subscribe</p>
           <form class="form-subscribe" name="Subscribe">
@@ -573,7 +573,7 @@
         </div>
       </div>
     </footer>
-    <!-- modal-window -->
+    <!-- modal-window ============================================================================================-->
     <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="modal close button">
