--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <li class="team-item">
               <img
                 srcset="./images/hero-photo/Mark.jpg 1x, 
-                ./images/hero-photo/img@2x.jpg x2"
+                images/hero-photo/img@2x.jpg x2"
                 src="./images/hero-photo/Mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -390,8 +390,8 @@
                   <source
                     media="(min-width:1158px )"
                     srcset="
-                      images/portfolio-img/Banking-App.jpg             1x,
-                      images/portfolio-img/Banking-App_img_desc@2x.jpg 2x
+                      images/portfolio-img/Banking-App.jpg 1x,
+                      images/portfolio-img/img_desc@2x.jpg 2x
                     " />
                   <source
                     media="(min-width:768px )"
@@ -594,8 +594,8 @@
                   <source
                     media="(min-width:768px )"
                     srcset="
-                      ./images/portfolio-img/Online-Courses_img_tab.jpg  1x,
-                      images/portfolio-img/Online-Courses_img_tab@2x.jpg 2x
+                      ./images/portfolio-img/Online-Courses_img_tab.jpg   1x,
+                      images/portfolio-img/Online-Courses_img_desc@2x.jpg 2x
                     " />
                   <source
                     media="(max-width:767px )"
