--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           <ul class="team-items">
             <li class="team-item">
               <img
-                srcset="./images/hero-photo/Mark.jpg 1x, 
-                images/hero-photo/img@2x.jpg x2"
+                srcset="./images/hero-photo/img_mark@1x_result.jpg x1,
+                ./images/hero-photo/img_mark@2x_result.jpg x2"
                 src="./images/hero-photo/Mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -197,6 +197,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/hero-photo/img_tom@1x_result.jpg 1x,
+                  ./images/hero-photo/img_tom@2x_result.jpg 2x
+                "
                 src="./images/hero-photo/Tom.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -257,6 +261,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/hero-photo/img_camila@1x_result.jpg 1x,
+                  ./images/hero-photo/img_camila@2x_result.jpg 2x
+                "
                 src="./images/hero-photo/Camila.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -317,6 +325,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/hero-photo/img_daniel@1x_result.jpg 1x,
+                  ./images/hero-photo/img_daniel@2x_result.jpg 2x
+                "
                 src="./images/hero-photo/Daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
