--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
           <ul class="team-items">
             <li class="team-item">
               <img
-                srcset="./images/hero-photo/img_mark@1x_result.jpg x1,
-                ./images/hero-photo/img_mark@2x_result.jpg x2"
+                srcset="
+                  ./images/hero-photo/img_mark@1x_result.jpg x1,
+                  ./images/hero-photo/img_mark@2x_result.jpg x2
+                "
                 src="./images/hero-photo/Mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
