--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             <li class="team-item">
               <img
                 srcset="
-                  ./images/hero-photo/img_mark@1x_result.jpg x1,
-                  ./images/hero-photo/img_mark@2x_result.jpg x2
+                  ./images/hero-photo/img_mark@1x.jpg 1x,
+                  ./images/hero-photo/img_mark@2x.jpg 2x
                 "
                 src="./images/hero-photo/Mark.jpg"
                 alt="Mark Guerrero"
